--- a/cookbooks/app/templates/default/apache.conf.erb
+++ b/cookbooks/app/templates/default/apache.conf.erb
@@ -1,6 +1,6 @@
 <VirtualHost *:80>
   ServerName <%= @params[:server_name] %>
-  ServerAlias <% @params[:server_aliases] && @params[:server_aliases].each do |a| %><%= "#{a}" %> <% end %>
+  ServerAlias <% @params[:server_aliases].each do |a| %><%= "#{a}" %> <% end %>
   DocumentRoot <%= @params[:docroot] %>
 
   <Directory <%= @params[:docroot] %>>
@@ -10,7 +10,17 @@
     Allow from all
   </Directory>
 
+  <Directory />
+    Options FollowSymLinks
+    AllowOverride None
+  </Directory>
+
   LogLevel info
   ErrorLog <%= @node[:apache][:log_dir] %>/<%= @params[:name] %>-error.log
   CustomLog <%= @node[:apache][:log_dir] %>/<%= @params[:name] %>-access.log combined
+
+  RewriteEngine On
+  RewriteLog <%= @node[:apache][:log_dir] %>/<%= @application_name %>-rewrite.log
+  RewriteLogLevel 0
+
 </VirtualHost>
